Replaced regex look-back and look-ahead, which prevented the site from working on Safari, with simple starting and ending match assertions. Fixed svg use tag not displaying properly on safari for maintenance page; included with and height property.

--- a/src/style/pgs/contact.less
+++ b/src/style/pgs/contact.less
@@ -242,6 +242,7 @@ section {
 	}
 	&#mediaLinksSection {
 		margin-top:3rem;
+		padding-bottom:3rem;
 		z-index: 1;
 
 		p {
